ecmascript/parser/tests/jsx/errors/issue-302/input.js.stderr
error: invalid jsx identifier
 --> $DIR/tests/jsx/errors/issue-302/input.js:1:2
  |
1 | <$App></$App>
  |  ^

